--- a/React/frontend/src/Modal.css
+++ b/React/frontend/src/Modal.css
@@ -1,23 +1,16 @@
 /* The Modal (background) */
 .modal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
+    overflow: hidden;
+    /* Hide the scrollbar */
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
 }
 
 .modal-header {
@@ -50,13 +43,21 @@
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
-    /* 15% from the top and centered */
+    position: fixed;
+    /* Change to fixed */
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     border: 1px solid #888;
     width: 40%;
-    /* Could be more or less, depending on screen size */
+    max-width: 600px;
+    /* Added to limit the width on larger screens */
     border-radius: 30px;
+    overflow: auto;
+    /* Enable scroll inside the modal content */
+    max-height: calc(100% - 40px);
+    /* Added to limit the height on smaller screens */
 }
 
 /* The Close Button */
@@ -72,4 +73,14 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Additional styles to hide the scrollbar */
+.modal-content::-webkit-scrollbar {
+    width: 0.4em;
+    background-color: #f5f5f5;
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+    background-color: #000;
 }
