--- a/React/frontend/src/Form.css
+++ b/React/frontend/src/Form.css
@@ -1,31 +1,32 @@
 form {
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  input,
-  select {
-    padding: 5px;
-    margin-bottom: 10px;
-  }
-  
-  button {
-    border-radius: 10px;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #82d188;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color:#82d188;
-  }
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+label {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+input,
+select {
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+button {
+  margin-right: 0.5%;
+  border-radius: 10px;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #82d188;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #82d188;
+}
