--- a/React/frontend/src/Clientes.css
+++ b/React/frontend/src/Clientes.css
@@ -1,14 +1,16 @@
 .clientes-container {
     padding: 20px;
-}
-
-.clientes-list {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+  }
+  .clientes-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-}
-
+    justify-content: center; /* Centra horizontalmente dentro del contenedor */
+  }
 .cliente-item {
     width: 300px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -27,4 +29,18 @@
     cursor: pointer;
 }
 
-/* Otros estilos según sea necesario */
+.btn {
+    text-decoration: none;
+    margin-right: 0.5%;
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #82d188;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #82d188;
+  }
